fixing carousel flickering before loaded

--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -320,6 +320,7 @@
     width: 750px;
     margin: auto;
     margin-bottom: 50px;
+    display: none;
 }
 
 .parties-next,
